deploy/k3s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ruleshift-gateway
  namespace: ruleshift-core
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.ruleshift.ru
      secretName: api-ruleshift-tls
  rules:
    - host: api.ruleshift.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ruleshift-gateway
                port:
                  name: http
